CMPN-4 - Created DTO structure for the "location" endpoint